[package]
name = "kdtree"
version = "0.1.0"
authors = ["Laurent Direr <laurent.direr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"

[profile.release]
# temporarily set to true for profiling (it's convenient to have names of functions in perf reports, this requires `debug`)
debug = false